# compliance-pre-scan

./: .env.example  .gitignore  README.md  conftest.py  debug_scan.py  pyproject.toml
config/: keywords.yml
config/policy/: compliance.rego
docs/: examples_anomalies.md  examples_decision_walkthroughs.md  examples_keywords.md  examples_pii.md  examples_secrets.md  false_positive_suppression.md
scripts/: install_models.ps1  smoke_test.ps1
src/compliance_scan/: __init__.py  config.py  logging_setup.py  main.py  masking.py  pipeline.py
src/compliance_scan/api/: app.py  compliance.py  scan.py
src/compliance_scan/audit/: __init__.py  db.py  export.py  models.py
src/compliance_scan/extractors/: __init__.py  base.py  dispatcher.py  docx.py  docx_extractor.py  pdf.py  pdf_extractor.py  rtf.py  rtf_extractor.py  txt.py  txt_extractor.py  xlsx.py  xlsx_extractor.py
src/compliance_scan/policy/: __init__.py  engine.py
src/compliance_scan/scanners/: __init__.py  anomaly_scanner.py  false_positive_filter.py  file_identity.py  keyword_scanner.py  language_detect.py  pii_scanner.py  secret_scanner.py
tests/: test_api.py  test_audit.py  test_block_enforcement.py  test_extractors.py  test_false_positive_filter.py  test_masking.py  test_pii_scanner.py  test_policy_engine.py  test_scanners.py
ui/: README.md  app.py  requirements.txt
