[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-pre-scan"
version = "0.1.0"
description = "Local pre-upload content security scanner for compliance platforms"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Async DB
    "aiosqlite>=0.20",
    # File type detection (pure Python, no C deps)
    "puremagic>=1.28",
    # Text extractors
    "pypdf>=4.3",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    # PII
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
    # Config / utils
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # ASGI test client
    "ruff>=0.4",
]

[project.scripts]
compliance-scan = "compliance_scan.api.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_scan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
