[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-pre-scan"
version = "0.2.0"
description = "Local pre-upload compliance scanner — PII, secrets, anomaly detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "aiosqlite>=0.20",
    # extraction
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "striprtf>=0.0.26",
    # file identity
    "puremagic>=1.28",
    # PII scanning
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    # language detection
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_scan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
